# minimal-etsi-qkd-004

./: .gitignore  README.md
etsi-gs-qkd-004-c/: CMakeLists.txt
etsi-gs-qkd-004-c/include/: memory_free_utils.h  write_key_to_file.h
etsi-gs-qkd-004-c/include/qkd/: copy.h  interfaces.h  models.h  serializers.h  sizes.h  ssl_socket.h  ssl_socket_client.h  ssl_socket_server.h  utils.h
etsi-gs-qkd-004-c/src/: client_api.c  client_example.c  memory_free_utils.c  server_example.c  write_key_to_file.c
etsi-gs-qkd-004-c/src/qkd/: copy.c  interfaces.c  serializers.c  sizes.c  ssl_socket.c  ssl_socket_client.c  ssl_socket_server.c  utils.c  wrapper.c
etsi-gs-qkd-004-c/ssl/: generate_ca_and_selfsigned_cert.sh
